<resources>
    <string name="app_name">ChatBox</string>
    <string name="login">LOGIN</string>
    <string name="login_name">LOGIN NAME:</string>
    <string name="password">PASSWORD:</string>
    <string name="register">REGISTER</string>
    <string name="login_ok">OK</string>
    <string name="register_ok">OK</string>
    <string name="search_conversation">Search Conversation</string>
    <string name="chat_list">Chat List</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_user_name">  Edit User Name</string>
    <string name="change_password">  Change Password</string>
    <string name="add_profile_picture">ADD PROFILE PICTURE</string>

    <string name="new_user_name">NEW USER NAME:</string>
    <string name="save">Save</string>
    <string name="current_password">CURRENT PASSWORD:</string>
    <string name="new_password">NEW PASSWORD:</string>
    <string name="confirm_new_password">CONFIRM NEW PASSWORD:</string>
    <string name="text">text</string>
    <string name="confirm_password">CONFIRM PASSWORD:</string>
    <string name="user_name_required">User Name is reqiured</string>
    <string name="pass_required">Password is required</string>
    <string name="wrong_input">Wrong User Name or Password</string>
    <string name="pass_confirmation_failed">Password confirmation failed</string>
    <string name="user_not_empty">User Name cannot be empty</string>
    <string name="cancel">cancel</string>
    <string name="wrong_pass">Wrong password</string>
    <string name="edit_conversation">Edit Conversation</string>
    <string name="conversation_name">Conversation Title:</string>
    <string name="delete">DELETE</string>
    <string name="back">BACK</string>
    <string name="edit">EDIT</string>
    <string name="title_not_empty">The Conversation Title cannot be empty</string>
    <string name="change_conversation_picture">CHANGE CONVERSATION PICTURE</string>
    <string name="add_user">ADD USER</string>
    <string name="update_error">Update failed!</string>
    <string name="password_change_error">Password change failed!</string>
    <string name="user_name_change_failed">User Name change failed!</string>
    <string name="your_name">You didn t changed your name!</string>
    <string name="registration_failed">Registration Failed!</string>
    <string name="add_location">Add location</string>
    <string name="address">Address:</string>

    <string-array name="languages">
        <item>EN</item>
        <item>HU</item>
    </string-array>

    <string-array name="types">
        <item>Private</item>
        <item>Group</item>
    </string-array>
</resources>