<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="bottom"
        android:text="@string/current_password" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etActualPass"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="30dp"
        android:textSize="24sp"
        app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editActualPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="bottom"
        android:text="@string/new_password" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNewPass"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="30dp"
        android:textSize="24sp"
        app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="bottom"
        android:text="@string/confirm_new_password" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etConfrimPass"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="30dp"
        android:textSize="24sp"
        app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/save_button"
        android:text="@string/save"
        android:textSize="16sp" />


</LinearLayout>