<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        android:text="Add Conversation"
        android:textAlignment="center"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="bottom"
        android:text="@string/conversation_name"
        android:textSize="18dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etConversationTitle"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="30dp"
        android:textSize="24sp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextConversationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:gravity="bottom"
        android:text="Conversation Type"
        android:textSize="18dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etConversationType"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTypeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:popupBackground="@drawable/spinner_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:dropDownVerticalOffset="40dp"
        android:dropDownWidth="match_parent"
        android:textAlignment="center"
        android:layout_marginStart="24dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:gravity="bottom"
        android:text="Conversation Unique Code"
        android:textSize="18dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etConversationCode"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="24sp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/cancel_button"
            android:text="@string/cancel"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/save_button"
            android:text="@string/save"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>